# mkdocs-decision-records

./: .releaserc.json  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.circleci/: config.yml
adr/000-TEMPLATE/: index.html
adr/001/: index.html
adr/002-Solution-for-preview/: index.html
adr/003-New-Solution-for-preview/: index.html
demo/: mkdocs.yml
demo/docs/: index.md
demo/docs/adr/: 000-TEMPLATE.md  001.md  002-Solution-for-preview.md  003-New-Solution-for-preview.md
docs/: index.md
docs/adr/: 000-TEMPLATE.md  001.md  002-Solution-for-preview.md
mkdocs_decision_records/: _markdown_utils.py  _markdown_utils_test.py  plugin.py  plugin_test.py
