[tool.poetry]
name = "mkdocs-decision-records"
version = "1.2.1"
description = "Manage decision records with mkdocs in a customizable and minimal fashion."
authors = ["Timo Reymann <mail@timo-reymann.de>"]
readme = "README.md"
packages = [
    { include = "mkdocs_decision_records" }
]
include = [
    "LICENSE"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: MkDocs",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]
repository = "https://github.com/timo-reymann/mkdocs-decision-records"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/timo-reymann/mkdocs-decision-records/issues"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = ">=1.4.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^9.5.48"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
decision-records = "mkdocs_decision_records.plugin:DecisionRecordsPlugin"
